--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="botoes">
                 <button class="botao ativo">Adotar um gatinho</button>
                 <button class="botao">Criar projetos em Javascript</button>
-                <button class="botao">Criar um portfolio</button>
+                <button class="botao">Mudar de emprego</button>
                 <button class="botao">Viajr</button>
             </div>
             <div class="abas-textos">
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Arrumar um novo emprego/h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Ir para o beto carrero/h3>
+                    <h3 class="aba-conteudo-titulo-principal">Ir para o beto carrero</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
