--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Adotar um gatinho</button>
-                <button class="botao">Criar projetos em Javascript</button>
+                <button class="botao">Fazer academia</button>
                 <button class="botao">Mudar de emprego</button>
-                <button class="botao">Viajr</button>
+                <button class="botao">Viajar</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Ir para a academia</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
